[project]
name = "hvv_departures"
authors = [
    { name = "Lume", email = "admin@example.com"}
]
description = "HVV Geofox GTI departures viewer for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "hvv_departures"
