[project]
name = "whatsapp_broadcast"
authors = [
    { name = "Lume", email = "admin@example.com"}
]
description = "WhatsApp Cloud API broadcast app for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "whatsapp_broadcast"
